--- a/website/index.html
+++ b/website/index.html
@@ -196,12 +196,12 @@
                   <p>
                      SysAdmin:
                      <ul>
-                        <li>● Policy Creation</li>
-                        <li>● Bash Scripting, Powershell Scripting</li>
-                        <li>● Patch Mgmt</li>
-                        <li>● End User Device Provisioning, Deployment, Off-boarding</li>
-                        <li>● Architected an internal and customer-facing IT Ticketing system (Jira, Zendesk, Slack)</li>
-                        <li>● Asset Inventory</li>
+                        <li>● Successfully configured and deployed Jamf Apple MDM across an environment of 40+ Mac devices, automating software deployment and configuration, macOS updates, and endpoint security.</li>
+                        <li>● Developed an internal IT Helpdesk using Jira with integrations with Slack and Google Workspace.</li>
+                        <li>● Led the implementation of, and trained a support team on our customer-facing Helpdesk and knowledge base powered by Zendesk.</li>
+                        <li>● Drafted various IT policies and procedures to ensure the safety and productivity of our employees.</li>
+                        <li>● Wrote basic bash scripts for simple automations like installing software, removing .dmg files, uploading configuration files, etc.</li>
+                        <li>● Developed command line tools to speed up the process of onboarding new employees using Python and various APIs from applications like Slack, Google Workspace, and Zoom.</li>
                      </ul>
                   </p>
 
@@ -216,41 +216,6 @@
                         <li>● Cloud/On-Prem SaaS Deployments</li>
                      </ul>
                   </p>   
-                  
-                  <p>
-                     - Cybersecurity:
-                     <ul>
-                        <li>● Member of the Information Security Committee</li>
-                        <li>● Vendor Security Reviews</li>
-                        <li>● Cybersecurity Awareness Training Admin</li>
-                        <li>● Policy Creation</li>
-                        <li>● SIEM implementation and administration</li>
-                        <li>● Internal Risk Assessments</li>
-                        <li>● Wargaming</li>
-                        <li>● Incident Response</li>
-                     </ul>
-                  </p>
-
-                  <p>
-                     - Official Job Description:
-                     ● Partner with the VP of Solutions Architecture to complete the Apple Business Manager and Jamf MDM
-                     implementation, and lead training sessions for all team members.
-                     ● Oversee the daily management and ongoing maintenance of hardware and software assets.
-                     ● Identify gaps in technology, evaluating and implementing solutions that seek to increase efficiency and
-                     security.
-                     ● Participate as a member of the Information Security Committee, and implement both technical and
-                     procedural controls under the guidance of the committee Chairperson.
-                     ● Implement an IT ticketing system, and train users on how to use it
-                     ● Troubleshoot systems issues, resolving in a timely manner.
-                     ● Establish an asset inventory.
-                     ● Ensure all systems are kept up to date and secured with necessary updates.
-                     ● Provide technical support to all employees
-                     ● Track and maintain annual technology budgets, making recommendations for cost improvements where
-                     possible.
-                     ● Support the CSM team with customer SSO integration with the CyberSaint application.
-                     ● Over time, develop the knowledge and experience to assist DevOps with deploying the CyberSaint
-                     application in on-premise and private cloud environments.
-                  </p>  
 
                </div>
 
